# sticky-notes2

./: CMakeLists.txt  README.md
include/: app.h  color.h  data.h  database.h  dout.h  file.h  note.h  open_note.h  selector.h  settings.h  window.h
src/: app.cpp  color.cpp  data.cpp  database.cpp  file.cpp  main.cpp  note.cpp  open_note.cpp  selector.cpp  settings.cpp  window.cpp
